alignment issue fixed on landing page

--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -48,10 +48,11 @@
 		justify-content: center;
 		align-items: center;
 		min-height: 30vh;
+		width: 70%;
 		p {
-			width: 60%;
+			width: auto;
 			padding: 20px;
-			margin: 5vh;
+			margin: 5vh 0;
 			font-size: 20px;
 			background-color: $container-color;
 			border: 2px outset $container-shadow;
